EDU-7342: Loosen set user roles validation and remove EPAS access when no team roles remain (#595)